<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_five_day_weather"
            android:icon="@drawable/ic_baseline_weather_24"
            android:title="@string/five_day_weather" />
        <item
            android:id="@+id/nav_hourly_weather"
            android:icon="@drawable/ic_baseline_hourly_24"
            android:title="@string/hourly_weather" />

        <item
            android:id="@+id/nav_ten_day_forecast"
            android:icon="@drawable/ic_baseline_ten_days_24"
            android:title="@string/ten_day_forecast" />


    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_my_cities"
            android:icon="@drawable/ic_baseline_my_cities_24"
            android:title="@string/my_cities" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_about_24"
            android:title="@string/about" />
    </group>

</menu>