<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/black_single_line"
        android:gravity="center"
        android:padding="@dimen/dp_twelve">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/twenty_four"
            android:layout_height="@dimen/twenty_four"
            android:layout_centerVertical="true"
            android:src="@drawable/snowflake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight"
            android:layout_toEndOf="@+id/imageView1"
            android:text="@string/temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:layout_width="wrap_content"
            android:id="@+id/toggle_temp"
            android:layout_height="wrap_content"
            app:textToggleRight="@string/fahrenheit"
            app:textToggleLeft="@string/celsius"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/black_single_line"
        android:gravity="center"
        android:padding="@dimen/dp_twelve">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/twenty_four"
            android:layout_height="@dimen/twenty_four"
            android:layout_centerVertical="true"
            android:src="@drawable/clock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/time_format"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggle_time"
            app:textToggleLeft="@string/twelve"
            app:textToggleRight="@string/twenty_four"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/black_single_line"
        android:gravity="center"
        android:padding="@dimen/dp_twelve">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/twenty_four"
            android:layout_height="@dimen/twenty_four"
            android:layout_centerVertical="true"
            android:src="@drawable/clock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/date_format"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateFormat"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_baseline_next_24"
            android:gravity="center"
            android:text="@string/system"
            android:textColor="@android:color/black" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/black_single_line"
        android:gravity="center"
        android:padding="@dimen/dp_twelve">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/twenty_four"
            android:layout_height="@dimen/twenty_four"
            android:layout_centerVertical="true"
            android:src="@drawable/wind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight"
            android:layout_toEndOf="@+id/imageView4"
            android:text="@string/wind_speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWindSpeed"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_baseline_next_24"
            android:gravity="center"
            android:text="@string/kmh"
            android:textColor="@android:color/black" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/black_single_line"
        android:gravity="center"
        android:padding="@dimen/dp_twelve">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/twenty_four"
            android:layout_height="@dimen/twenty_four"
            android:layout_centerVertical="true"
            android:src="@drawable/gauge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight"
            android:layout_toEndOf="@+id/imageView5"
            android:text="@string/pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_baseline_next_24"
            android:gravity="center"
            android:id="@+id/textViewPressure"
            android:text="@string/hectopascals"
            android:textColor="@android:color/black" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/black_single_line"
        android:gravity="center"
        android:padding="@dimen/dp_twelve"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/twenty_four"
            android:layout_height="@dimen/twenty_four"
            android:layout_centerVertical="true"
            android:src="@drawable/precipitation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/eight"
            android:layout_toEndOf="@+id/imageView6"
            android:text="@string/precipitation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_baseline_next_24"
            android:gravity="center"
            android:id="@+id/textViewPreciption"
            android:text="@string/mm"
            android:textColor="@android:color/black" />
    </RelativeLayout>
</LinearLayout>