<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_search_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/searchView1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_clear"
            android:layout_toEndOf="@+id/back"
            android:background="@null"
            android:drawablePadding="6dp"
            android:hint="@string/enter_your_location_here"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="5dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            />

        <TextView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/clear"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/bg_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:divider="@android:color/black"
        android:dividerHeight="1dip"
        />

</LinearLayout>